workspace = { members = ["libs/cera-ast", "libs/cera-parse", "libs/cera-src-ast"] }
[package]
name = "cera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cera-ast = { path = "libs/cera-ast" }
cera-parse = { path = "libs/cera-parse" }
cera-src-ast = { path = "libs/cera-src-ast" }
